new file main.py and updated readme.md

--- a/workpad.ipynb
+++ b/workpad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "'\\nUnicode (UTF-8) table\\n\\nCapital Letters A-Z = Range 64 (0x41) - 90 (0x5a)\\nLower Case Letters a-z = Range 97 (0x61) - 122 (0x7a)\\n\\n'"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -59,6 +59,7 @@
       "{'A': 1, 'B': 0, 'C': 0, 'D': 0, 'E': 0, 'F': 0, 'G': 0, 'H': 0, 'I': 6, 'J': 0, 'K': 0, 'L': 5, 'M': 1, 'N': 0, 'O': 0, 'P': 1, 'Q': 0, 'R': 0, 'S': 0, 'T': 0, 'U': 0, 'V': 0, 'W': 0, 'X': 0, 'Y': 0, 'Z': 0}\n",
       "{'a': 28, 'b': 5, 'c': 10, 'd': 16, 'e': 59, 'f': 6, 'g': 11, 'h': 14, 'i': 32, 'j': 0, 'k': 7, 'l': 17, 'm': 18, 'n': 38, 'o': 25, 'p': 18, 'q': 0, 'r': 24, 's': 39, 't': 43, 'u': 17, 'v': 5, 'w': 6, 'x': 2, 'y': 13, 'z': 0}\n",
       "{'a': 29, 'b': 5, 'c': 10, 'd': 16, 'e': 59, 'f': 6, 'g': 11, 'h': 14, 'i': 38, 'j': 0, 'k': 7, 'l': 22, 'm': 19, 'n': 38, 'o': 25, 'p': 19, 'q': 0, 'r': 24, 's': 39, 't': 43, 'u': 17, 'v': 5, 'w': 6, 'x': 2, 'y': 13, 'z': 0}\n",
+      "dict_values([29, 5, 10, 16, 59, 6, 11, 14, 38, 0, 7, 22, 19, 38, 25, 19, 0, 24, 39, 43, 17, 5, 6, 2, 13, 0])\n",
       "467\n"
      ]
     }
@@ -89,13 +90,15 @@
     "\n",
     "total_count = sum(character_values)\n",
     "\n",
+    "print(character_values)\n",
+    "\n",
     "print(total_count)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
